--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.5"
+    "@astrojs/preact": "^4.1.3",
+    "@astrojs/tailwind": "^6.0.2",
+    "astro": "^5.16.5",
+    "preact": "^10.28.0",
+    "sharp": "^0.34.5",
+    "tailwindcss": "^3.4.19"
   }
 }
