--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.16.5",
     "preact": "^10.28.0",
+    "resend": "^6.6.0",
     "sharp": "^0.34.5",
     "tailwindcss": "^3.4.19"
   }
