--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/preact": "^4.1.3",
     "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/vercel": "^9.0.2",
     "astro": "^5.16.5",
     "preact": "^10.28.0",
     "resend": "^6.6.0",
