--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -10,6 +10,18 @@
 				"cache-control": "public, max-age=31536000, immutable"
 			},
 			"continue": true
+		},
+		{
+			"src": "^/_server-islands/([^/]+?)/?$",
+			"dest": "_render"
+		},
+		{
+			"src": "^/_image/?$",
+			"dest": "_render"
+		},
+		{
+			"src": "^/api/contact/?$",
+			"dest": "_render"
 		}
 	]
 }
