--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -22,6 +22,10 @@
 		{
 			"src": "^/api/contact/?$",
 			"dest": "_render"
+		},
+		{
+			"src": "^/work/([^/]+?)/?$",
+			"dest": "_render"
 		}
 	]
 }
